# agent-status

./: CLAUDE.md  Cargo.toml  README.md  claude-tmux-attention-plan.md
claude-attention/: Cargo.toml
claude-attention/src/: main.rs  state.rs
claude-attention/tests/: cli.rs
crates/agent-status/: Cargo.toml  README.md
crates/agent-status/extensions/: opencode.ts  pi-coding-agent.ts
crates/agent-status/src/: commands.rs  lib.rs  main.rs  state.rs
crates/agent-status/src/agents/: claude_code.rs  mod.rs  pi_coding_agent.rs
crates/agent-status/src/commands/: agent_extension.rs  list.rs  mod.rs  set.rs  status.rs
crates/agent-status/tests/: cli.rs
crates/agent-switcher/: Cargo.toml  README.md
crates/agent-switcher/src/: app.rs  filter.rs  main.rs  ui.rs
docs/superpowers/plans/: 2026-05-07-claude-attention-rust.md  2026-05-08-agent-status-rename-and-modularize.md  2026-05-08-opencode-support.md  2026-05-08-pi-coding-agent-support.md  2026-05-09-improve-session-switcher.md  2026-05-18-agent-extension-pi-opencode.md  2026-05-18-agent-name-enum.md  2026-05-18-agent-switcher-ratatui.md  2026-05-18-claude-code-pid-liveness-sweep.md  2026-05-18-claude-code-pretooluse-hook.md  2026-05-18-claude-code-wrapper-shim.md  2026-05-19-switcher-activity-and-permission-context.md  2026-05-20-publish-crates-1.0.0.md  2026-05-20-split-commands-rs.md
extensions/: claude-wrapper.sh  opencode.ts  pi-coding-agent.ts
src/: commands.rs  main.rs  state.rs
src/agents/: claude_code.rs  mod.rs  opencode.rs  pi_coding_agent.rs
tests/: cli.rs
