[workspace]
resolver = "2"
members = ["crates/agent-status", "crates/agent-switcher"]

[workspace.package]
version = "1.1.2"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
