[package]
name = "claude-attention"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-attention"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
