[package]
name = "agent-status"
version.workspace = true
edition.workspace = true
description = "Tmux-integrated indicator showing which AI coding agent sessions are waiting on user input."

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "agent-status"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
