[package]
name = "agent-switcher"
version.workspace = true
edition.workspace = true
description = "Tmux popup TUI for switching between waiting AI coding agent sessions."
authors = ["Paul van der Meijs <vandermeijs@redkiwi.nl>"]
license = "MIT"
repository = "https://github.com/paulvandermeijs/agent-status"
homepage = "https://github.com/paulvandermeijs/agent-status"
readme = "README.md"
keywords = ["tmux", "ai-agent", "claude-code", "tui", "ratatui"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "agent-switcher"
path = "src/main.rs"

[dependencies]
agent-status = { path = "../agent-status", version = "1.1.0" }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
